--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "remix-auth": "^3.7.0",
+    "remix-auth-form": "^1.5.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
