--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
     "db:push": "prisma db push",
     "db:studio": "prisma studio"
   },
+  "prisma": {
+    "seed": "node --loader ts-node/esm prisma/seed.ts"
+  },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.654.0",
+    "@aws-sdk/client-s3": "^3.658.1",
     "@aws-sdk/lib-storage": "^3.654.0",
+    "@aws-sdk/s3-request-presigner": "^3.658.1",
     "@aws-sdk/types": "^3.654.0",
     "@conform-to/react": "^1.2.2",
     "@conform-to/zod": "^1.2.2",
@@ -52,6 +56,7 @@
     "@remix-run/dev": "^2.12.1",
     "@types/bcryptjs": "^2.4.6",
     "@types/jest": "^29.5.13",
+    "@types/node": "^22.7.2",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
@@ -67,7 +72,8 @@
     "postcss": "^8.4.38",
     "prisma": "^5.19.1",
     "tailwindcss": "^3.4.4",
-    "typescript": "^5.1.6",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.2",
     "vite": "^5.1.0",
     "vite-tsconfig-paths": "^4.2.1"
   },
