--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "seed": "node --loader ts-node/esm prisma/seed.ts"
   },
   "dependencies": {
+    "@aws-sdk/client-cloudfront": "^3.658.1",
     "@aws-sdk/client-s3": "^3.658.1",
-    "@aws-sdk/lib-storage": "^3.654.0",
+    "@aws-sdk/lib-storage": "^3.658.1",
     "@aws-sdk/s3-request-presigner": "^3.658.1",
     "@aws-sdk/types": "^3.654.0",
     "@conform-to/react": "^1.2.2",
