formatted all files and added badges to profile

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,9 @@
     "**/.server/**/*.ts",
     "**/.server/**/*.tsx",
     "**/.client/**/*.ts",
-    "**/.client/**/*.tsx"
-, "init.ts"  ],
+    "**/.client/**/*.tsx",
+    "init.ts"
+  ],
   "compilerOptions": {
     "lib": ["DOM", "DOM.Iterable", "ES2022"],
     "types": ["@remix-run/node", "vite/client"],
