--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.5.6",
+    "https": "^1.0.0",
     "isbot": "^4.1.0",
     "lucide-react": "^0.445.0",
     "prisma-rbac": "^1.2.9",
