--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-icons": "^5.3.0",
     "remix-auth": "^3.7.0",
     "remix-auth-form": "^1.5.0",
+    "remix-utils": "^7.7.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
