--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "framer-motion": "^11.5.6",
     "isbot": "^4.1.0",
     "lucide-react": "^0.445.0",
+    "pretty-bytes": "^6.1.1",
     "prisma-rbac": "^1.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
