rebrand to jays.pics

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-DATABASE_URL="mysql://username:password@ip:port/jays.host"
+DATABASE_URL="mysql://username:password@ip:port/jays.pics"
 SESSION_SECRET="secret"
 
 STORAGE_ACCESS_KEY=access
