--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@conform-to/zod": "^1.2.2",
     "@prisma/client": "^5.20.0",
     "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-progress": "^1.1.0",
@@ -38,9 +39,11 @@
     "@remix-run/node": "^2.12.1",
     "@remix-run/react": "^2.12.1",
     "@remix-run/serve": "^2.12.1",
+    "@tanstack/react-table": "^8.20.5",
     "aws-sdk": "^2.1691.0",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
+    "cloudflare": "^3.5.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.5.6",
     "isbot": "^4.1.0",
