added domain sharing

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,6 @@ STORAGE_REGION=eu-west-1
 STORAGE_BUCKET=imagebucket
 
 BASE_URL=localhost:5173
+
+CLOUDFLARE_USER_ID=AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAa
+CLOUDFLARE_USER_API=aaaaaaaaaaaaaaaa
