added nameserver checking

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@aws-sdk/types": "^3.654.0",
     "@conform-to/react": "^1.2.2",
     "@conform-to/zod": "^1.2.2",
+    "@prisma/adapter-pg": "^5.20.0",
     "@prisma/client": "^5.20.0",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-checkbox": "^1.1.1",
@@ -49,6 +50,7 @@
     "graphile-worker": "^0.16.6",
     "isbot": "^4.1.0",
     "lucide-react": "^0.445.0",
+    "pg": "^8.13.0",
     "pretty-bytes": "^6.1.1",
     "prisma-rbac": "^1.2.9",
     "react": "^18.2.0",
