added start script

--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "",
+  "name": "jayspics",
   "private": true,
   "sideEffects": false,
   "type": "module",
   "scripts": {
+    "start-with-worker": "concurrently \"npm run start\" \"npx graphile-worker -c 'postgresql://root:jCJmm6XKnXeSaygHZsqOnPKCYTaa5Yl0@172.18.0.2:5432/jayspics'\"",
     "build": "remix vite:build",
     "dev": "remix vite:dev",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
