add referral code regeneration

--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "remix-utils": "^7.7.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.0.3",
     "zod": "^3.23.8"
   },
   "devDependencies": {
