--- a/package.json
+++ b/package.json
@@ -48,9 +48,12 @@
     "cloudflare": "^3.5.0",
     "clsx": "^2.1.1",
     "concurrently": "^9.0.1",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.5.6",
     "graphile-worker": "^0.16.6",
+    "intl-parse-accept-language": "^1.0.0",
+    "is-ip": "^5.0.1",
     "isbot": "^4.1.0",
     "lucide-react": "^0.445.0",
     "pg": "^8.13.0",
