--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "is-ip": "^5.0.1",
     "isbot": "^4.1.0",
     "lucide-react": "^0.445.0",
+    "motion": "^11.16.0",
     "pg": "^8.13.0",
     "pretty-bytes": "^6.1.1",
     "prisma-rbac": "^1.2.9",
