--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -20,7 +20,7 @@ jobs:
         run: npm run build
 
       - name: clone package.json
-        run: cp package.json /build
+        run: cp package.json ./build
 
       - name: push
         uses: s0/git-publish-subdir-action@develop
