--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,5 +17,5 @@ jobs:
         with:
           node-version: 12.x
       
-      - run: npm ci
+      - run: npm i
       - run: npm run build --if-present
