--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -16,6 +16,7 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.PRIVATE_KEY }}
           password: ${{ secrets.PASSWORD }}
+          passphrase: ${{ secrets.PASSWORD }}
           port: 22
           script: |
             cd ~/jays.pics
