--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
+    "react-markdown": "^10.1.0",
     "remix-auth": "^3.7.0",
     "remix-auth-form": "^1.5.0",
     "remix-utils": "^7.7.0",
