--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -16,11 +16,11 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.PRIVATE_KEY }}
           password: ${{ secrets.PASSWORD }}
-          passphrase: ${{ secrets.PASSWORD }}
+          passphrase: ${{ secrets.PASSPHRASE }}
           port: 22
           script: |
             cd ~/jays.pics
-            git pull origin main
+            git pull
             npm install --only=prod
             npm run build
             pm2 restart jays.pics
