--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "remix vite:build",
     "dev": "remix vite:dev",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
-    "start": "node server.js",
+    "start": "remix-serve ./build/server/index.js",
     "typecheck": "tsc",
     "setup": "npx prisma migrate dev && npx prisma generate",
     "db:generate": "prisma migrate dev",
