--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
     "react-markdown": "^10.1.0",
+    "recharts": "^2.15.3",
     "remix-auth": "^3.7.0",
     "remix-auth-form": "^1.5.0",
     "remix-utils": "^7.7.0",
