--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
   "devDependencies": {
     "@remix-run/dev": "^2.12.1",
     "@types/bcryptjs": "^2.4.6",
-    "@types/jest": "^29.5.13",
+    "@types/jest": "^29.5.14",
     "@types/node": "^22.7.2",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
@@ -87,15 +87,16 @@
     "eslint": "^8.38.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-react-refresh": "^0.4.20",
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
     "jest": "^29.7.0",
     "postcss": "^8.4.38",
     "prisma": "^5.20.0",
     "tailwindcss": "^3.4.4",
+    "ts-jest": "^29.3.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2",
     "vite": "^5.1.0",
