--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,39 +1,30 @@
-name: CD
+name: Deploy to VPS via SSH
 
 on:
   push:
-    tags:
-      - 'v*.*.*'
-  workflow_dispatch:
+    branches: [ main ]
 
 jobs:
-  deploy:
+  ssh-deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v3
+      - uses: actions/checkout@v3
+
+      - name: Load deploy key into SSH agent
+        uses: webfactory/ssh-agent@v0.5.3
         with:
-          node-version: '20'
-          cache: 'npm'
-      - run: npm ci
-      - run: npm run build
-      - name: Upload build artifacts
-        uses: appleboy/scp-action@v0.1.3
-        with:
-          host: ${{ secrets.DEPLOY_HOST }}
-          username: ${{ secrets.DEPLOY_USER }}
-          key: ${{ secrets.DEPLOY_KEY }}
-          port: ${{ secrets.DEPLOY_PORT || '22' }}
-          source: 'build'
-          target: ${{ secrets.DEPLOY_PATH }}
-      - name: Restart service
-        uses: appleboy/ssh-action@v1.0.0
-        with:
-          host: ${{ secrets.DEPLOY_HOST }}
-          username: ${{ secrets.DEPLOY_USER }}
-          key: ${{ secrets.DEPLOY_KEY }}
-          port: ${{ secrets.DEPLOY_PORT || '22' }}
-          script: |
-            cd ${{ secrets.DEPLOY_PATH }}
-            npm install --production
-            pm2 restart all || true
+          ssh-private-key: ${{ secrets.DEPLOY_KEY }}
+
+      - name: Add VPS to known_hosts
+        run: |
+            ssh-keyscan -H ${{ secrets.VPS_HOST }} >> ~/.ssh/known_hosts
+
+      - name: Deploy to VPS
+        run: |
+          ssh deploy@${{ secrets.VPS_HOST }} << 'EOF'
+            npm install
+            npx prisma migrate deploy
+            npx prisma generate
+            npm run build
+            pm2 reload jays-pics 
+          EOF
