--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -10,21 +10,30 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Load deploy key into SSH agent
-        uses: webfactory/ssh-agent@v0.5.3
-        with:
-          ssh-private-key: ${{ secrets.DEPLOY_KEY }}
+      - name: Install SSH key
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.DEPLOY_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
 
       - name: Add VPS to known_hosts
         run: |
-            ssh-keyscan -H ${{ secrets.VPS_HOST }} >> ~/.ssh/known_hosts
+          ssh-keyscan -H ${{ secrets.VPS_HOST }} >> ~/.ssh/known_hosts
+
+      - name: Debug SSH auth
+        run: |
+          ssh -vvv -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no deploy@${{ secrets.VPS_HOST }} 'echo "SSH OK"'
 
       - name: Deploy to VPS
         run: |
-          ssh deploy@${{ secrets.VPS_HOST }} << 'EOF'
+          ssh -i ~/.ssh/id_rsa \
+              -o StrictHostKeyChecking=no \
+              deploy@${{ secrets.VPS_HOST }} << 'EOF'
+            set -e
+            cd /var/www/jays.pics
             npm install
             npx prisma migrate deploy
             npx prisma generate
             npm run build
-            pm2 reload jays-pics 
+            pm2 reload jays-pics
           EOF
