actually add the thing that updates files... oops..

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -16,14 +16,6 @@ jobs:
           echo "${{ secrets.DEPLOY_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
 
-      - name: Add VPS to known_hosts
-        run: |
-          ssh-keyscan -H ${{ secrets.VPS_HOST }} >> ~/.ssh/known_hosts
-
-      - name: Debug SSH auth
-        run: |
-          ssh -vvv -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no deploy@${{ secrets.VPS_HOST }} 'echo "SSH OK"'
-
       - name: Deploy to VPS
         run: |
           ssh -i ~/.ssh/id_rsa \
@@ -31,6 +23,9 @@ jobs:
               deploy@${{ secrets.VPS_HOST }} << 'EOF'
             set -e
             cd /var/www/jays.pics
+            git fetch --all
+            git reset --hard origin/main
+            git clean -fd
             rm -rf build
             npm install
             npx prisma migrate deploy
