--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "remix-auth": "^3.7.0",
     "remix-auth-form": "^1.5.0",
     "remix-utils": "^7.7.0",
+    "sharp": "^0.34.2",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.0.3",
