--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 ###############
 # Docker & DB #
 ###############
-DATABASE_URL="postgresql://root:password@123.4.5.6:5432/jayspics"
-POSTGRES_USER=root
+DATABASE_URL="postgresql://postgres:password@localhost:5432/jayspics"
+POSTGRES_USER=postgres
 POSTGRES_PASSWORD=FQt0n7ogwM6TxzW82zBZASSARucGffn1
 
 ###############
@@ -22,6 +22,6 @@ CLOUDFLARE_USER_API=5fuN6QOlZL4A1CV7CH38AOSixjMmCQcDCPTnr5pq
 ###############
 # Website     #
 ############### 
-BASE_IP=1.2.3.4
+BASE_IP=localhost # change in prod
 PORT=80
 SESSION_SECRET="super_s3cr3t_secret!"
