Implemented DiscordOAuth - This should be using the main branch too

--- a/example.env
+++ b/example.env
@@ -25,3 +25,10 @@ CLOUDFLARE_USER_API=5fuN6QOlZL4A1CV7CH38AOSixjMmCQcDCPTnr5pq
 BASE_IP=1.2.3.4
 PORT=80
 SESSION_SECRET="super_s3cr3t_secret!"
+BASE_URL=https://jays.pics
+
+###############
+# OAuth2      #
+###############
+DISCORD_CLIENT_ID=
+DISCORD_CLIENT_SECRET=
