--- a/example.env
+++ b/example.env
@@ -6,22 +6,23 @@ POSTGRES_USER=root
 POSTGRES_PASSWORD=FQt0n7ogwM6TxzW82zBZASSARucGffn1
 
 ###############
-# AWS         #
+#  Sessions   #
 ###############
-STORAGE_ACCESS_KEY=AWS_ACCESS_KEY
-STORAGE_SECRET=AWS_SECRET
+SESSION_SECRET="whatisgoingon"
+
+###############
+#  AWS        #
+###############
+STORAGE_ACCESS_KEY=SUPERSECRETKEY
+STORAGE_SECRET=EvEnMOrEsECrETseCrET+Xa5
 STORAGE_REGION=eu-north-1
-STORAGE_BUCKET=AWS_BUCKET
+STORAGE_BUCKET=bucket-name
 
 ###############
-# Cloudflare  #
+# Site Config #
 ###############
-CLOUDFLARE_USER_ID=202b0f442d68990c2aea2aaf4b5de40f
-CLOUDFLARE_USER_API=5fuN6QOlZL4A1CV7CH38AOSixjMmCQcDCPTnr5pq
-
-###############
-# Website     #
-############### 
-BASE_IP=1.2.3.4
+BASE_IP=192.168.0.1
+BASE_DOMAIN=jays.pics
 PORT=80
-SESSION_SECRET="super_s3cr3t_secret!"
+VERSION="1.0.0"
+
