--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "motion": "^11.16.0",
     "pg": "^8.13.0",
     "pretty-bytes": "^6.1.1",
+    "pretty-ms": "^9.2.0",
     "prisma-rbac": "^1.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
