--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
     "react-markdown": "^10.1.0",
+    "reactflow": "^11.11.4",
     "recharts": "^2.15.3",
     "remix-auth": "^3.7.0",
     "remix-auth-form": "^1.5.0",
