--- a/package.json
+++ b/package.json
@@ -105,7 +105,9 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2",
     "vite": "^5.1.0",
-    "vite-tsconfig-paths": "^4.2.1"
+    "vite-tsconfig-paths": "^4.2.1",
+    "husky": "^9.1.7",
+    "prettier": "^3.2.5"
   },
   "engines": {
     "node": ">=20.0.0"
