--- a/package.json
+++ b/package.json
@@ -115,7 +115,7 @@
     "node": ">=20.0.0"
   },
   "lint-staged": {
-    "*.js": "eslint --cache --fix",
-    "*.{js,css,md}": "prettier --write"
+    "*.{js,cjs,ts}": "eslint --cache --fix",
+    "*.{js,css,md,tsx,ts,cjs}": "prettier --write"
   }
 }
