--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "@types/node": "^22.7.2",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
+    "@types/tar-stream": "^3.1.4",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "@typescript-eslint/parser": "^6.7.4",
     "autoprefixer": "^10.4.19",
