Implement email verification system with rate limiting

--- a/example.env
+++ b/example.env
@@ -11,7 +11,7 @@ POSTGRES_PASSWORD=FQt0n7ogwM6TxzW82zBZASSARucGffn1
 SESSION_SECRET="whatisgoingon"
 
 ###############
-#  AWS        #
+#     AWS     #
 ###############
 STORAGE_ACCESS_KEY=SUPERSECRETKEY
 STORAGE_SECRET=EvEnMOrEsECrETseCrET+Xa5
@@ -26,3 +26,19 @@ BASE_DOMAIN=jays.pics
 PORT=80
 VERSION="1.0.0"
 
+###############
+#    Stripe   #
+###############
+STRIPE_SECRET_KEY="sk_live_key"
+
+###############
+#    Email    #
+###############
+RESEND_API_KEY="re_your_resend_api_key"
+
+###############
+#  Rate Limit #
+###############
+REDIS_ENDPOINT="redis_endpoint"
+REDIS_PORT=6379
+UPSTASH_TOKEN="redis_password_aka_token"
