--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
     "db:seed": "npx prisma db seed",
-    "prepare": "husky && husky install"
+    "prepare": "husky && husky install",
+    "email:dev": "email dev --dir ./app/emails --port 4173"
   },
   "prisma": {
     "seed": "node --loader ts-node/esm prisma/seed.ts"
@@ -41,10 +42,13 @@
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
+    "@react-email/components": "0.1.0",
     "@remix-run/node": "^2.12.1",
     "@remix-run/react": "^2.12.1",
     "@remix-run/serve": "^2.12.1",
     "@tanstack/react-table": "^8.20.5",
+    "@upstash/ratelimit": "^2.0.5",
+    "@upstash/redis": "^1.35.0",
     "aws-sdk": "^2.1691.0",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.0",
@@ -55,6 +59,7 @@
     "dotenv": "^16.5.0",
     "framer-motion": "^11.5.6",
     "graphile-worker": "^0.16.6",
+    "input-otp": "^1.4.2",
     "intl-parse-accept-language": "^1.0.0",
     "is-ip": "^5.0.1",
     "isbot": "^4.1.0",
@@ -64,8 +69,8 @@
     "pretty-bytes": "^6.1.1",
     "pretty-ms": "^9.2.0",
     "prisma-rbac": "^1.2.9",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-icons": "^5.3.0",
     "react-markdown": "^10.1.0",
     "reactflow": "^11.11.4",
@@ -73,6 +78,7 @@
     "remix-auth": "^3.7.0",
     "remix-auth-form": "^1.5.0",
     "remix-utils": "^7.7.0",
+    "resend": "^4.6.0",
     "sharp": "^0.34.2",
     "stripe": "^18.2.1",
     "tailwind-merge": "^2.5.2",
@@ -104,6 +110,7 @@
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
     "prisma": "^5.20.0",
+    "react-email": "4.0.16",
     "tailwindcss": "^3.4.4",
     "ts-jest": "^29.3.4",
     "ts-node": "^10.9.2",
