--- a/example.env
+++ b/example.env
@@ -27,6 +27,11 @@ PORT=80
 VERSION="1.0.0"
 
 ###############
+#   Webhooks  #
+###############
+DISCORD_WEBHOOK_URL=webhook here
+
+###############
 #    Stripe   #
 ###############
 STRIPE_SECRET_KEY="sk_live_key"
