--- a/example.env
+++ b/example.env
@@ -19,6 +19,12 @@ STORAGE_REGION=eu-north-1
 STORAGE_BUCKET=bucket-name
 
 ###############
+# Cloudflare  #
+###############
+CLOUDFLARE_USER_ID=cf_user_id
+CLOUDFLARE_USER_API=cf_api_key
+
+###############
 # Site Config #
 ###############
 BASE_IP=192.168.0.1
@@ -26,3 +32,24 @@ BASE_DOMAIN=jays.pics
 PORT=80
 VERSION="1.0.0"
 
+###############
+#   Webhooks  #
+###############
+DISCORD_WEBHOOK_URL=discord_webhook_here
+
+###############
+#   Stripe   #
+###############
+STRIPE_SECRET_KEY=sk_live_key
+
+###############
+#    Email    #
+###############
+RESEND_API_KEY=re_key
+
+###############
+#  Rate Limit #
+###############
+REDIS_ENDPOINT="redis_endpoint"
+REDIS_PORT=redis_port
+UPSTASH_TOKEN="redis_password_upstash_token"
