--- a/package.json
+++ b/package.json
@@ -67,8 +67,8 @@
     "pretty-bytes": "^6.1.1",
     "pretty-ms": "^9.2.0",
     "prisma-rbac": "^1.2.9",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-markdown": "^10.1.0",
     "reactflow": "^11.11.4",
