--- a/example.env
+++ b/example.env
@@ -17,6 +17,7 @@ STORAGE_ACCESS_KEY=SUPERSECRETKEY
 STORAGE_SECRET=EvEnMOrEsECrETseCrET+Xa5
 STORAGE_REGION=eu-north-1
 STORAGE_BUCKET=bucket-name
+STORAGE_PROVIDER=AWS
 
 ###############
 # Cloudflare  #
