--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
   },
   "devDependencies": {
     "@remix-run/dev": "^2.12.1",
+    "@tailwindcss/postcss": "^4.1.11",
     "@types/bcryptjs": "^2.4.6",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.7.2",
@@ -94,7 +95,6 @@
     "@types/tar-stream": "^3.1.4",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "@typescript-eslint/parser": "^6.7.4",
-    "autoprefixer": "^10.4.19",
     "eslint": "^8.38.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-import-resolver-typescript": "^3.6.1",
@@ -110,7 +110,7 @@
     "prettier": "^3.2.5",
     "prisma": "^5.20.0",
     "react-email": "4.0.16",
-    "tailwindcss": "^3.4.4",
+    "tailwindcss": "^4.1.11",
     "ts-jest": "^29.3.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2",
