--- a/package.json
+++ b/package.json
@@ -41,10 +41,12 @@
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.2.7",
     "@react-email/components": "0.1.0",
     "@remix-run/node": "^2.12.1",
     "@remix-run/react": "^2.12.1",
     "@remix-run/serve": "^2.12.1",
+    "@tailwindcss/vite": "^4.1.11",
     "@tanstack/react-table": "^8.20.5",
     "@upstash/ratelimit": "^2.0.5",
     "aws-sdk": "^2.1691.0",
@@ -68,6 +70,7 @@
     "pretty-ms": "^9.2.0",
     "prisma-rbac": "^1.2.9",
     "react": "^18.3.1",
+    "react-aria-components": "^1.10.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-markdown": "^10.1.0",
@@ -79,14 +82,13 @@
     "resend": "^4.6.0",
     "sharp": "^0.34.2",
     "stripe": "^18.2.1",
-    "tailwind-merge": "^2.5.2",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.1.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.12.1",
-    "@tailwindcss/postcss": "^4.1.11",
     "@types/bcryptjs": "^2.4.6",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.7.2",
@@ -106,7 +108,6 @@
     "husky": "^9.1.7",
     "jest": "^29.7.0",
     "lint-staged": "^16.1.2",
-    "postcss": "^8.4.38",
     "prettier": "^3.2.5",
     "prisma": "^5.20.0",
     "react-email": "4.0.16",
